--- a/Class_and_objects.ipynb
+++ b/Class_and_objects.ipynb
@@ -6,7 +6,7 @@
       "name": "Class and objects.ipynb",
       "provenance": [],
       "mount_file_id": "1BaSGn6DO6YI8mRz3N0oWeKlr3i1CHWoh",
-      "authorship_tag": "ABX9TyPaJbu56VQqHNzEr83gr5PG"
+      "authorship_tag": "ABX9TyMYoOeQr9sseMwmCEN63q7q"
     },
     "kernelspec": {
       "name": "python3",
@@ -236,6 +236,70 @@
           "output_type": "stream",
           "text": [
             "you have created 2 instances of Human class \n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "gE_g-1at3DSa"
+      },
+      "source": [
+        "# Class methos as a constructor\r\n",
+        " "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "5dvShhxO3MRb",
+        "outputId": "f196dd38-1c38-4b47-988d-fee77528bab8"
+      },
+      "source": [
+        "class Human:\r\n",
+        "  count_instance=0\r\n",
+        "\r\n",
+        "  def __init__(self,n,a,o):         \r\n",
+        "    Human.count_instance+=1\r\n",
+        "    self.name=n\r\n",
+        "    self.age= a\r\n",
+        "    self.occupation=o\r\n",
+        "\r\n",
+        "  @classmethod\r\n",
+        "  def from_string(cls,string):             #Class method as constructor\r\n",
+        "    name,age,occupation=string.split(',')  #split method\r\n",
+        "    return cls(name,age,occupation)\r\n",
+        "\r\n",
+        "\r\n",
+        "  @classmethod          #Decorator\r\n",
+        "  def count_instances(cls):\r\n",
+        "    return f\"you have created {cls.count_instance} instances of {cls.__name__} class \"\r\n",
+        "\r\n",
+        "\r\n",
+        "  def is_above18(self):\r\n",
+        "    return self.age>18\r\n",
+        "\r\n",
+        "  def occupation(self):\r\n",
+        "    return self.occupation\r\n",
+        "\r\n",
+        "h1= Human(\"Birendra\",22,'student')\r\n",
+        "h2= Human(\"Ashish\",22,'Guitarist')\r\n",
+        "\r\n",
+        "h3=Human.from_string(\"Sonal,22,finding_out\")\r\n",
+        "\r\n",
+        "print(h3.name,h3.occupation,h3.age)\r\n"
+      ],
+      "execution_count": 30,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sonal finding_out 22\n"
           ],
           "name": "stdout"
         }
