--- a/Class_and_objects.ipynb
+++ b/Class_and_objects.ipynb
@@ -6,7 +6,7 @@
       "name": "Class and objects.ipynb",
       "provenance": [],
       "mount_file_id": "1BaSGn6DO6YI8mRz3N0oWeKlr3i1CHWoh",
-      "authorship_tag": "ABX9TyMYoOeQr9sseMwmCEN63q7q"
+      "authorship_tag": "ABX9TyNAi+P6gW62Vt0kh0/hLDml"
     },
     "kernelspec": {
       "name": "python3",
@@ -300,6 +300,77 @@
           "output_type": "stream",
           "text": [
             "Sonal finding_out 22\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ih7F2W6W55kU"
+      },
+      "source": [
+        "# OOP Static Method"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "8A1IxABQ5_GV",
+        "outputId": "8c1ab284-7243-4212-da15-5e4cab053b0b"
+      },
+      "source": [
+        "class Human:\r\n",
+        "  count_instance=0\r\n",
+        "\r\n",
+        "  def __init__(self,n,a,o):         \r\n",
+        "    Human.count_instance+=1\r\n",
+        "    self.name=n\r\n",
+        "    self.age= a\r\n",
+        "    self.occupation=o\r\n",
+        "\r\n",
+        "  @classmethod\r\n",
+        "  def from_string(cls,string):             #Class method as constructor\r\n",
+        "    name,age,occupation=string.split(',')  #split method\r\n",
+        "    return cls(name,age,occupation)\r\n",
+        "\r\n",
+        "\r\n",
+        "  @classmethod          #Decorator\r\n",
+        "  def count_instances(cls):\r\n",
+        "    return f\"you have created {cls.count_instance} instances of {cls.__name__} class \"\r\n",
+        "\r\n",
+        "\r\n",
+        "  @staticmethod         #static method\r\n",
+        "  def hello():\r\n",
+        "    print(\"Hello, this is static method\")\r\n",
+        "\r\n",
+        "\r\n",
+        "  def is_above18(self):\r\n",
+        "    return self.age>18\r\n",
+        "\r\n",
+        "  def occupation(self):\r\n",
+        "    return self.occupation\r\n",
+        "\r\n",
+        "h1= Human(\"Birendra\",22,'student')\r\n",
+        "h2= Human(\"Ashish\",22,'Guitarist')\r\n",
+        "\r\n",
+        "h3=Human.from_string(\"Sonal,22,finding_out\")\r\n",
+        "\r\n",
+        "print(h3.name,h3.occupation,h3.age)\r\n",
+        "\r\n",
+        "Human.hello()"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Sonal finding_out 22\n",
+            "Hello, this is static method\n"
           ],
           "name": "stdout"
         }
